--- a/meu-repositorio/styles/style.css
+++ b/meu-repositorio/styles/style.css
@@ -10,10 +10,15 @@ body {
     max-width: 320px;
 }
 
+main {
+    margin: auto;
+}
+
 main > article > h1 {
     padding: 25px;
     margin-bottom: 5px;
     text-align: left;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.404);
 }
 
 .minha-imagem {
