--- a/meu-repositorio/styles/style.css
+++ b/meu-repositorio/styles/style.css
@@ -38,3 +38,23 @@ main > article > p {
     text-align: justify;
     text-indent: 25px;
 }
+
+@media screen and (min-width: 768px) {
+    body {
+        background-color: lightgray;
+    }
+
+    main {
+        background-color: white;
+        margin: 20px auto;
+        border: 1px solid black;
+        border-radius: 10px 0px;
+        max-width: 768px;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.623);
+    }
+
+    .minha-imagem {
+        float: left;
+        margin: 0px 10px 0px 17px;
+    }
+}
